# eeprom_programmer

./: Cargo.toml  README.adoc  memory.x
.cargo/: config
.github/workflows/: rustfmt.yml
src/: app.rs  main.rs
